2005-05-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/tables.c: Allow shorthand for "set macros".

2005-05-23  Ethan Merritt  <merritt@u.washington.edu>

	* term/estimate.trm (ENHest_put_text): Track estimated limits on
	string y extent also.

2005-05-22  Peter Weilbacher <paepse@users.sourceforge.net>

	* src/gp_hist.h src/readline.c: Fix conditional dependencies on
	READLINE and HAVE_LIBREADLINE so that ./configure + build is
	clean with all three readline options.

2005-05-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm term/mif.trm term/pdf.trm: Code cleanup - remove static
	initializers from the TERM_PROTO code block. ggi.trm has these also,
	but I can't test for correctness after a change so I don't want to 
	change it. Remove obsolete comments.

2005-05-20  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util.c (PRINT_MESSAGE_TO_STDERR): New macro: invokes printf
	while protecting itself from current_prompt == NULL.
	(os_error, int_error, int_warn): Use new macro.

2005-05-20  Peter Weilbacher <paepse@users.sourceforge.net>

	SF Patch [981476] "Get history functions working with GNU readline"

	* command.c (history_command): Let the "history" command be available
	also for GNU readline, i.e. HAVE_LIBREADLINE.

	* history.c: Make routines for GNU readline compatible to those of
	gnuplot readline.

2005-05-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readline) src/gadgets.h src/save.c (save_set_all)
	src/set.c (set_bars parse_histogramstyle) src/show.c (show_histogram) 
	src/plot2d.c (get_data histogram_range_fiddling) 
	src/graphics.c (do_plot plot_bars plot_boxes): New histogram plot mode

	    set style histogram errorbars {gap <g>} {linewidth {lw}}

	Identical to 'set style histogram clustered' except that a second
	column of input data (required) is used to generate error bars at the
	top of each box belonging to the histogram.
	
	* docs/gnuplot.doc: Document the addition of a new histogram