@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: be.trm,v 1.14 2004/07/01 17:10:12 broeker Exp $
+ * $Id: be.trm,v 1.15 2004/10/19 00:24:07 sfeam Exp $
  *
  */
 
@@ -361,7 +361,7 @@ TERM_TABLE_START(be_driver)
     BE_text, null_scale, BE_graphics, BE_move, BE_vector,
     BE_linetype, BE_put_text, null_text_angle,
     BE_justify_text, BE_point, do_arrow, set_font_null,
-    BE_pointsize, TERM_CAN_MULTIPLOT,
+    BE_pointsize, TERM_CAN_MULTIPLOT|TERM_NO_OUTPUTFILE,
     BE_text /* suspend can use same routine */ , 0 /* resume */ ,
     BE_fillbox, BE_linewidth
 TERM_TABLE_END(be_driver)
